<resources>
    <string name="app_name">hitiger</string>
    <string name="facebook_app_id">573777689470178</string>
    <string name="title_activity_complete_your_profile">Complete Your Profile</string>
    <string name="profile_name">Name*</string>
    <string name="profile_email">Email*</string>
    <string name="verify_mobile_number">Verify Mobile Number*</string>
    <string name="update_profile">Update Profile</string>
    <string name="mendetory_information">*Mendetory Information</string>
    <string name="confirmation_contact_number">Is this your correct number?</string>
    <string name="verification_send">We will send you a verification code by SMS.</string>
    <string name="title_activity_enter_otp">Enter Otp</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="title_activity_home_page">Home Page</string>
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>
    <string name="title_activity_about_you">About You</string>
    <string name="add_more_category">Categories</string>
    <string name="title_activity_add_more_category">Categories</string>
    <string name="title_activity_add_category">Add</string>
    <string name="title_activity_club">Club</string>
    <string name="title_activity_invite_friends">Invite Friends</string>
    <string name="invite_friend_message">Lorem Ipsum is simply dummy text of the printing and type setting industry.</string>
    <string name="invite_friend">Invite Friends</string>
    <string name="about_yellow_sox">About YellowSOX</string>
    <string name="get_in_touch">Get in touch</string>
    <string name="title_activity_your_venue">Your Venue</string>
    <string name="add_venue">Add Venue</string>
    <string name="key">AIzaSyAWjkAOGPx9YTR-By9FZ3WY1BcpVG9MTrM</string>
    <string name="title_activity_create_opportynity">CreateOpportynityActivity</string>
    <string name="hello_blank_fragment">fragment 1</string>
    <string name="select_date">Select Date</string>
    <string name="or">or</string>
    <string name="today_date">Today | Mar 3</string>
    <string name="tommorow_date">Tommorow | Mar 4</string>
    <string name="date">March 5</string>
    <string name="enter_time">Enter Time</string>
    <string name="any_change">Any Change for Opportunity?</string>
    <string name="all_day">All Day</string>
    <string name="free">Free</string>
    <string name="address_for_opportunity">Address for your opportunity.</string>
    <string name="address_1">1THING HQ, C1-2924, Sector-43, Gurgaon.</string>
    <string name="address_2">C-1714, Sushant Lok, near Quians plaza Gurgaon, 122001</string>
    <string name="do_you_have_opportunity">Do you have place for opportunity?</string>
    <string name="title_activity_select_address">SelectAddressActivity</string>
    <string name="review_opportunity">Review Opportunity</string>
    <string name="review_opportunity_once_again">Please review opportunity once, before you post!</string>
    <string name="create">CREATE</string>
    <string name="next">NEXT</string>
    <string name="select_time">Select Time</string>
    <string name="search_your_address">Enter your Address</string>
    <string name="successful">SUCCESS</string>
    <string name="loading_categories">Loading Categories...</string>
    <string name="add">Add</string>
    <string name="added">Added</string>
    <string name="loading_clubs">Loading Clubs...</string>
    <string name="adding_to_this_club">Adding you to this club...</string>
    <string name="removing_from_this_club">Removing you from this club...</string>
    <string name="creating_opportunities">Creating Opportunities...</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>
    <string name="lets_play">Let\'s Play</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="adding_categories">Adding Categories...</string>
    <string name="creating_club">Creating Club...</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="more_about_you">More About You</string>
    <string name="venue">Venue</string>
    <string name="update">Update</string>
    <string name="okey">Okey</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="congratulation">Congratulation</string>
    <string name="title_activity_followers">Followers</string>
    <string name="loading_followers">Loading Followers...</string>
    <string name="title_activity_others_profile">OthersProfileActivity</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="select_game">Select Game</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="no_opportunities">No Opportunities Available</string>
    <string name="checking_credential">Checking Credential...</string>
    <string name="pending">Pending</string>
    <string name="loading_sports">Loading Sports...</string>
    <string name="empty_folloewrs_list">There\'s no followers of you.</string>
    <string name="loading_event_detail">Loading Events...</string>
    <string name="loading_opportunities_detail">Loading Opportunities...</string>
    <string name="match_fixed_with">Match fixed with</string>
    <string name="sending_request">Sending Request...</string>
    <string name="cancelling_request">Cancelling Request...</string>
    <string name="decline">Decline</string>
    <string name="hosted_by">Hosted by</string>
    <string name="nothing_to_display">Nothing to display</string>
    <string name="fix_with">Fix With</string>
    <string name="player_requests">Player Requests</string>
    <string name="no_events_available">Currently no events made by you.</string>

    <string name="gcm_sender_id">484746166815</string>

    <string name="request_to_play">request to play.</string>
    <string name="players_request_to_play">Player\'s request to play.</string>
    <string name="currently_no_user">Currently no user\'s available.</string>
    <string name="loading_played_with">Loading Played With</string>
    <string name="no_played_with">Currently no played with available.</string>
    <string name="played_with">Played With</string>
    <string name="accepting_request">Accepting Request...</string>
    <string name="loading_following">Loading Following...</string>
    <string name="getting_your_location">Getting Your Location...</string>
    <string name="no_call_permission">Please grant permission\'s</string>
    <string name="share_with_friends">Share with Friend</string>
    <string name="followers">Followers</string>
    <string name="rate_your_experiance">Rate your experiance</string>
    <string name="empty_notification">No notification yet.</string>
</resources>
