<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/fragment_image"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/trophy"/>

    <TextView
        android:id="@+id/select_fragment_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/select_date"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/medium"/>

    <EditText
        android:id="@+id/amount_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_background"
        android:gravity="center"
        android:hint="Enter Amount"
        android:inputType="number"
        android:maxLength="6"
        android:textColor="@color/lightGrey"
        android:textSize="@dimen/extra_extra_large"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/time_or_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="06:30-AM"
        android:textColor="@color/lightGrey"
        android:textSize="@dimen/extra_extra_large"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/today_date"
            style="@style/date_text_style"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="5dp"
            android:text="@string/today_date"
            android:textSize="@dimen/medium"/>

        <TextView
            android:id="@+id/tommorow_date"
            style="@style/date_text_style"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="28dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:text="@string/tommorow_date"
            android:textSize="@dimen/medium"/>

    </LinearLayout>

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/fill_circle_light_grey_24dp"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        android:text="@string/or"
        android:textColor="@color/textColorGrey"
        android:textSize="@dimen/small"/>

    <TextView
        android:id="@+id/fragment_button"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_background_with_rounded_rectangular_grey_border"
        android:drawableLeft="@drawable/calendar"
        android:drawablePadding="10dp"
        android:text="@string/select_date"
        android:textColor="@color/textColorGrey"
        android:textSize="@dimen/large"
        style="@style/create_opportunity_default_button_style"/>

</LinearLayout>