<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_bottom_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.CompleteOrEditProfileActivity"
    tools:showIn="@layout/activity_complete_your_profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/relative_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="62dp"
                    android:layout_height="62dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_profile_default_image"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name_input_layout"
                    style="@style/profile_text_input_layout"
                    android:layout_marginRight="8dp"
                    android:layout_toLeftOf="@id/profile_image">

                    <EditText
                        android:id="@+id/name_edit_text"
                        style="@style/profile_edit_text_style"
                        android:editable="false"
                        android:hint="@string/profile_name"/>
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/take_camera"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_toRightOf="@id/name_input_layout"
                    android:background="@drawable/fill_circle_black"
                    android:padding="6dp"
                    android:src="@drawable/ic_camera_24dp"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_input_layout"
                    style="@style/profile_text_input_layout"
                    android:layout_below="@id/name_input_layout">

                    <EditText
                        android:id="@+id/email_edit_text"
                        style="@style/profile_edit_text_style"
                        android:editable="false"
                        android:hint="@string/profile_email"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/number_hint_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email_input_layout"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/verify_mobile_number"
                    android:textSize="@dimen/small"/>

                <TextView
                    android:id="@+id/country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/number_hint_text"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="5dp"
                    android:text="+91"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/large"/>

                <View
                    android:id="@+id/country_code_below_view"
                    android:layout_width="31dp"
                    android:layout_height="1dp"
                    android:layout_below="@+id/country_code"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/textColorGrey"/>

                <EditText
                    android:id="@+id/mobile_number_edit_text"
                    style="@style/profile_edit_text_style"
                    android:layout_below="@id/number_hint_text"
                    android:layout_marginTop="1dp"
                    android:layout_toRightOf="@id/country_code"
                    android:hint="Mobile Number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"/>

                <TextView
                    android:id="@+id/verified"
                    style="@style/verified_text_style"
                    android:layout_below="@id/number_hint_text"
                    android:layout_marginRight="8dp"
                    android:paddingTop="6dp"
                    android:text="Verified"
                    android:visibility="gone"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/update_profile_button"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_below="@id/relative_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="68dp"
                android:layout_marginRight="68dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/disable_button_background"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/update_profile"
                android:textColor="@android:color/white"
                android:textSize="@dimen/small"
                android:textStyle="bold"/>



        </RelativeLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/mendetory_information"
        android:textSize="7dp"
        android:id="@+id/textView" />


</RelativeLayout>
