<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:clickable="true"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/nintyPercentOfWhite"/>

    <RelativeLayout
        android:id="@+id/invite_friend_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/invite_friend_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/invite_friends"/>

        <TextView
            android:id="@+id/invite_friend_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/invite_friend_image"
            android:gravity="center_vertical"
            android:text="@string/invite_friend"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/medium"/>

        <ImageView
            android:id="@+id/right_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_right"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/nintyPercentOfWhite"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/get_in_touch_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/get_in_touch"/>

        <TextView
            android:id="@+id/get_in_touch_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            android:layout_toRightOf="@id/get_in_touch_image"
            android:gravity="center_vertical"
            android:text="@string/get_in_touch"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/medium"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_right"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/nintyPercentOfWhite"/>

    <RelativeLayout
        android:id="@+id/about_yellow_sox_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/about_yellow_sox_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/about_yellowsox"/>

        <TextView
            android:id="@+id/about_yellow_sox_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:layout_toRightOf="@id/about_yellow_sox_image"
            android:gravity="center_vertical"
            android:text="@string/about_yellow_sox"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/medium"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_right"/>

    </RelativeLayout>

</LinearLayout>