<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:clickable="true"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:paddingTop="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_profile_default_image" />

            <FrameLayout
                android:id="@+id/edit_person_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="200dp"
                android:paddingBottom="5dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/edit_person"
                    style="@style/edit_text_with_white_background"
                    android:text="Edit" />
            </FrameLayout>

            <TextView
                android:id="@+id/follow_or_following"
                style="@style/follow_button_style"
                android:text="Follow"
                android:visibility="gone" />

        </RelativeLayout>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Shasank H Madhukar"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Shasank@gmail.com"
            android:textColor="@color/sixtyPercentOfWhite"
            android:textSize="@dimen/small" />

        <RelativeLayout
            android:id="@+id/user_contact_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/user_contact_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="9423231321"
                android:textColor="@android:color/white"
                android:textSize="@dimen/large" />

            <TextView
                android:id="@+id/verified"
                style="@style/verified_text_style"
                android:layout_centerVertical="true"
                android:paddingRight="20dp"
                android:text="Verified" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/textColorGrey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/played_with_count"
            style="@style/drawer_counter_style"
            android:text="0" />

        <TextView
            android:id="@+id/followers_count_text"
            style="@style/drawer_counter_style"
            android:text="0" />

        <TextView
            android:id="@+id/following_count_text"
            style="@style/drawer_counter_style"
            android:text="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/played_with_text"
            style="@style/drawer_counter_message_dtyle"
            android:text="@string/played_with" />

        <TextView
            android:id="@+id/followers_text"
            style="@style/drawer_counter_message_dtyle"
            android:text="@string/followers" />

        <TextView
            android:id="@+id/following_text"
            style="@style/drawer_counter_message_dtyle"
            android:text="@string/following" />
    </LinearLayout>

</LinearLayout>