<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_background_with_border"
        android:orientation="vertical">

        <include
            layout="@layout/opportunity_layout"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/nintyPercentOfWhite"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="12dp"
            android:paddingTop="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_profile_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_profile_default_image"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Thushar Thakur"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/medium"/>

                    <TextView
                        android:id="@+id/number_of_game_played_by_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="43 Game Played"
                        android:textColor="@color/textColorGrey"
                        android:textSize="@dimen/medium"/>

                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/requesting_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/cancel_request"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/light_background_with_border"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="4dp"
                    android:text="@string/cancel_request"
                    android:textColor="@color/textColorGrey"
                    android:textSize="@dimen/medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/pending"
                    android:text="@string/pending"
                    android:textColor="@color/textColorGrey"
                    android:textSize="@dimen/medium"/>

            </RelativeLayout>


            <TextView
                android:id="@+id/lets_play_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/yellow_background"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/lets_play"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/medium"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>